Incluind Panel to show log messages. This panel is reachable through menu item View -> Console. This closes #12.